--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name"    : "BrainSvn",
   "version" : "0.1.0",
-  "main"    : "main.js"
+  "main": "main.js",
+  "scripts": {
+    "start": "electron main.js"
+  }
 }
